# COS214

./: CMakeLists.txt  COS 214 prac 3.vpp  COS 214 prac 3.vpp.bak_000f  README.md
Practical 2/: BoatmanFactory.h  InfantryFactory.cpp  ShieldBearer.h  SoldierFactory.h  Soldiers.cpp  Soldiers.h  Task 1.vpp  Task 1.vpp.bak_000f  Task 1.vpp.bak_001d  main  main.cpp
Practical 2/Diagrams/: Task 1.vpp  Task 1.vpp.bak_000f
Practical 2/Files/: BattleManager.cpp  BattleManager.h  Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  DemoMain  DemoMain.cpp  FactoryManager.cpp  FactoryManager.h  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  MainManager.cpp  MainManager.h  Memento.cpp  Memento.h  PrototypeRegistry.cpp  PrototypeRegistry.h  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  SoldierFactory.cpp  SoldierFactory.h  Soldiers.cpp  Soldiers.h  TestingMain.cpp  demo.mk  main  main.cpp  makefile
Practical 3/Files/: Ambush.h  Artillery.h  BattleStrategy.h  Cavalry.cpp  Fortification.cpp  Legion.cpp  LegionFactory.cpp  LegionUnit.cpp  LegionUnit.h  MainManager.cpp  MainManager.h  OpenFieldArtillery.h  OpenFieldCavalry.cpp  TestingMain.cpp  (+15 more)
Practical 4/: Doxyfile
Practical 5/: Command.cpp  Command.h  DoorLock.h  Doxyfile  LegacyDevice.cpp  Light.cpp  Light.h  SmartDevice.cpp  SmartThermostatAdapter.cpp  SmartThermostatAdapter.h  Thermostat.h  Toggle.cpp  ToggleLightOff.cpp  ToggleLightOff.h  ToggleLightOn.cpp  ToggleThermostatOff.h  ToggleThermostatOn.h  makefile
Test/: main.cpp  makefile
practical 3/: makefile
(+129 files in other folders)
